#time 2h 0m adding top section of full marketing site

--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -6,71 +6,6 @@ body {
     color: $color-main-font;
 }
 
-.language-selector {
-    position: absolute;
-    right: 20px;
-    top: 20px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.language-selector__current {
-    position: relative;
-    padding: 0 24px 0 0;
-}
-
-.language-selector__arrow {
-    transition: all 0.2s;
-    position: absolute;
-    top: 1px;
-    right: 1px;
-    border: solid white;
-    border-width: 0 2px 2px 0;
-    display: inline-block;
-    padding: 4px;
-    transform: rotate(45deg);
-}
-
-.language-selector__layer {
-    display: none;
-    transition: all 0.1s;
-    position: absolute;
-    right: -1px;
-    top: 16px;
-    background-color: white;
-    border-radius: 4px;
-    min-width: 50px;
-    padding: 6px 10px;
-    &.-active {
-        transform: translateY(10px);
-    }
-    &:before {
-        position: absolute;
-        content: ' ';
-        top: -6px;
-        right: 0;
-        width: 0; 
-        height: 0; 
-        border-left: 8px solid transparent;
-        border-right: 8px solid transparent;
-        border-bottom: 8px solid white;
-    }
-}
-
-.language-selector__item {
-    transition: all 0.2s;
-    display: block;
-    text-align: right;
-    color: $color-sidebar-font;
-    text-decoration: none;
-    opacity: 1;
-    line-height: 1.4;
-    font-size: 14px;
-    &:hover {
-        opacity: 0.6;
-    }
-}
-
 .page-container {
     position: relative;
     overflow: hidden;
@@ -81,7 +16,24 @@ body {
 }
 
 .home-header {
-    padding: 40px 0 50px;
+    color: $color-header-font;
+    padding: 40px 300px 50px 160px;
+    line-height: 1.2;
+    z-index: 1000;
+    position: relative;
+    h1 {
+        font-size: 45px;
+    }
+    p {
+        font-size: 18px;
+        padding: 30px 100px 30px 0;
+    }
+}
+
+.home-header__cta {
+    .button {
+        margin-right: 20px;
+    }
 }
 
 .home-logo {
@@ -122,4 +74,27 @@ section {
 .home-intro {
     min-height: 1024px;
     background-image: linear-gradient(to bottom right, #DEFBFF, white);
+}
+
+.presale-countdown {
+    margin-top: 225px;
+    max-width: 535px;
+    width: 100%;
+    min-height: 300px;
+    border-radius: 20px;
+    box-sizing: border-box;
+    box-shadow: 1px 2px 20px -1px rgba(108,73,255,0.4);
+    background-color: $color-background;
+    padding: 40px;
+    text-align: center;
+    text-transform: uppercase;
+    color: $color-main-font;
+}
+
+.presale-countdown__header {
+    font-size: 20px;
+}
+.presale-countdown__subheader {
+    font-size: 36px;
+    padding: 10px 0 40px;
 }
