--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -9,7 +9,10 @@ $breakpoint-phablet: 600px;
 
 // branded colors
 $color-background: #ffffff;
+$color-button-background: #4B49FF;
+$color-alternate-font: #ffffff;
 $color-main-font: #25247C;
+$color-header-font: #07160E;
 $color-footer-font: #ffffff;
 $color-sidebar-font: #000000;
 $color-sidebar-link: #0676FF;
