--- a/site/static/css/styles.css
+++ b/site/static/css/styles.css
@@ -64,31 +64,33 @@ body {
 
 button, .button {
   cursor: pointer;
+  display: inline-block;
+  width: auto;
   -webkit-transition: all 0.25s;
   -o-transition: all 0.25s;
   transition: all 0.25s;
-  font-size: 18px;
+  font-size: 20px;
   text-transform: uppercase;
-  display: block;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  width: 100%;
   text-align: center;
   color: #25247C;
   opacity: 1;
   text-decoration: none;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#D97BFF), to(#734CFF));
-  background-image: -o-linear-gradient(top left, #D97BFF, #734CFF);
-  background-image: linear-gradient(to bottom right, #D97BFF, #734CFF);
-  padding: 16px;
+  background-color: #ffffff;
+  padding: 16px 60px;
   border-radius: 30px;
   outline: none;
+  -webkit-box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.5);
+  box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.5);
 }
 button:hover, .button:hover {
-  opacity: 0.9;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#734CFF), to(#D97BFF));
-  background-image: -o-linear-gradient(top left, #734CFF, #D97BFF);
-  background-image: linear-gradient(to bottom right, #734CFF, #D97BFF);
+  opacity: 0.7;
+}
+
+.button--alt {
+  background-color: #4B49FF;
+  color: #ffffff;
 }
 
 /* Home styles
@@ -96,81 +98,6 @@ button:hover, .button:hover {
 body {
   background-color: #ffffff;
   color: #25247C;
-}
-
-.language-selector {
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.language-selector__current {
-  position: relative;
-  padding: 0 24px 0 0;
-}
-
-.language-selector__arrow {
-  -webkit-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
-  position: absolute;
-  top: 1px;
-  right: 1px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  display: inline-block;
-  padding: 4px;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.language-selector__layer {
-  display: none;
-  -webkit-transition: all 0.1s;
-  -o-transition: all 0.1s;
-  transition: all 0.1s;
-  position: absolute;
-  right: -1px;
-  top: 16px;
-  background-color: white;
-  border-radius: 4px;
-  min-width: 50px;
-  padding: 6px 10px;
-}
-.language-selector__layer.-active {
-  -webkit-transform: translateY(10px);
-  -ms-transform: translateY(10px);
-  transform: translateY(10px);
-}
-.language-selector__layer:before {
-  position: absolute;
-  content: ' ';
-  top: -6px;
-  right: 0;
-  width: 0;
-  height: 0;
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
-  border-bottom: 8px solid white;
-}
-
-.language-selector__item {
-  -webkit-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
-  display: block;
-  text-align: right;
-  color: #000000;
-  text-decoration: none;
-  opacity: 1;
-  line-height: 1.4;
-  font-size: 14px;
-}
-.language-selector__item:hover {
-  opacity: 0.6;
 }
 
 .page-container {
@@ -183,7 +110,22 @@ body {
 }
 
 .home-header {
-  padding: 40px 0 50px;
+  color: #07160E;
+  padding: 40px 300px 50px 160px;
+  line-height: 1.2;
+  z-index: 1000;
+  position: relative;
+}
+.home-header h1 {
+  font-size: 45px;
+}
+.home-header p {
+  font-size: 18px;
+  padding: 30px 100px 30px 0;
+}
+
+.home-header__cta .button {
+  margin-right: 20px;
 }
 
 .home-logo {
@@ -233,6 +175,32 @@ section {
   background-image: linear-gradient(to bottom right, #DEFBFF, white);
 }
 
+.presale-countdown {
+  margin-top: 225px;
+  max-width: 535px;
+  width: 100%;
+  min-height: 300px;
+  border-radius: 20px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.4);
+  box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.4);
+  background-color: #ffffff;
+  padding: 40px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #25247C;
+}
+
+.presale-countdown__header {
+  font-size: 20px;
+}
+
+.presale-countdown__subheader {
+  font-size: 36px;
+  padding: 10px 0 40px;
+}
+
 .top-nav {
   position: relative;
   width: 100%;
@@ -240,4 +208,178 @@ section {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 30px;
+  font-size: 14px;
+}
+
+.top-nav__menu {
+  position: absolute;
+  top: 45px;
+  right: 30px;
+}
+
+.top-nav__item {
+  position: relative;
+  margin-left: 35px;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+  display: inline-block;
+  font-size: 14px;
+  color: #25247C;
+}
+.top-nav__item a, .top-nav__item .language-selector__current {
+  font-size: 14px;
+  color: #25247C;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.top-nav__item a:before, .top-nav__item .language-selector__current:before {
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  -o-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: -5px;
+  left: 0;
+  background-color: #25247C;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  -ms-transform: scaleX(0);
+  transform: scaleX(0);
+}
+.top-nav__item a:hover:before, .top-nav__item .language-selector__current:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  -ms-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+.language-selector {
+  position: relative;
+  cursor: pointer;
+}
+
+.language-selector__current {
+  position: relative;
+  padding: 0 24px 0 0;
+}
+
+.language-selector__arrow {
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+  position: absolute;
+  top: 0px;
+  right: 1px;
+  border: solid #25247C;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 4px;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.language-selector__layer {
+  display: none;
+  -webkit-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  transition: all 0.1s;
+  position: absolute;
+  right: -1px;
+  top: 16px;
+  background-color: white;
+  border-radius: 4px;
+  min-width: 50px;
+  padding: 6px 10px;
+}
+.language-selector__layer.-active {
+  -webkit-transform: translateY(10px);
+  -ms-transform: translateY(10px);
+  transform: translateY(10px);
+}
+.language-selector__layer:before {
+  position: absolute;
+  content: ' ';
+  top: -6px;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 8px solid white;
+}
+
+.language-selector__item {
+  margin-left: 35px;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+  display: inline-block;
+  text-align: right;
+  color: #000000;
+  text-decoration: none;
+  opacity: 1;
+  line-height: 1.4;
+  font-size: 14px;
+}
+.language-selector__item:hover {
+  opacity: 0.6;
+}
+
+.header-bg-1 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 536px;
+  background: transparent url(../images/bgs/bg-home1.png) 50% 50% no-repeat;
+  background-size: 100%;
+  z-index: 6;
+}
+
+.header-bg-2 {
+  position: absolute;
+  bottom: 140px;
+  left: 0;
+  width: 100%;
+  height: 355px;
+  background: transparent url(../images/bgs/bg-home2.png) 50% 50% no-repeat;
+  background-size: 100%;
+  z-index: 5;
+}
+
+.header-bg-3 {
+  position: absolute;
+  bottom: 220px;
+  left: 0;
+  width: 100%;
+  height: 397px;
+  background: transparent url(../images/bgs/bg-home3.png) 50% 50% no-repeat;
+  background-size: 100%;
+  z-index: 4;
+}
+
+.header-bg-4 {
+  position: absolute;
+  bottom: 200px;
+  left: 0;
+  width: 100%;
+  height: 498px;
+  background: transparent url(../images/bgs/bg-home4.png) 50% 50% no-repeat;
+  background-size: 100%;
+  z-index: 3;
+}
+
+.header-bg-5 {
+  position: absolute;
+  bottom: 135px;
+  left: 0;
+  width: 100%;
+  height: 711px;
+  background: transparent url(../images/bgs/bg-home5.png) 50% 50% no-repeat;
+  background-size: 100%;
+  z-index: 2;
 }
