--- a/src/sass/buttons.scss
+++ b/src/sass/buttons.scss
@@ -2,22 +2,27 @@
 
 button, .button {
     cursor: pointer;
+    display: inline-block;
+    width: auto;
     transition: all 0.25s;
-    font-size: 18px;
+    font-size: 20px;
     text-transform: uppercase;
-    display: block;
     box-sizing: border-box;
-    width: 100%;
     text-align: center;
     color: $color-main-font;
     opacity: 1;
     text-decoration: none;
-    background-image: linear-gradient(to bottom right, $color-button-light, $color-button-dark);
-    padding: 16px;
+    background-color: $color-background;
+    padding: 16px 60px;
     border-radius: 30px;
     outline: none;
+    box-shadow: 1px 2px 20px -1px rgba(108,73,255,0.5);
     &:hover {
-        opacity: 0.9;
-        background-image: linear-gradient(to bottom right, $color-button-dark, $color-button-light);
+        opacity: 0.7;
     }
+}
+
+.button--alt {
+    background-color: $color-button-background;
+    color: $color-alternate-font;
 }
