--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -73,7 +73,7 @@ section {
 
 .home-intro {
     min-height: 1024px;
-    background-image: linear-gradient(to bottom right, #DEFBFF, white);
+    background-image: linear-gradient(#DEFBFF, white 60%);
 }
 
 .presale-countdown {
