--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -166,7 +166,7 @@ section {
 
 .home-intro {
   min-height: 1024px;
-  background-image: linear-gradient(to bottom right, #DEFBFF, white);
+  background-image: linear-gradient(#DEFBFF, white 60%);
 }
 
 .presale-countdown {
@@ -302,6 +302,10 @@ section {
   opacity: 0.6;
 }
 
+.home-parallax {
+  transform: all 0.2s;
+}
+
 .header-bg-1 {
   position: absolute;
   bottom: 0;
@@ -315,24 +319,26 @@ section {
 
 .header-bg-2 {
   position: absolute;
-  bottom: 140px;
+  bottom: 80px;
   left: 0;
   width: 100%;
   height: 355px;
   background: transparent url(../images/bgs/bg-home2.png) 50% 50% no-repeat;
   background-size: 100%;
   z-index: 5;
+  transform: translateY(-84.2009px);
 }
 
 .header-bg-3 {
   position: absolute;
-  bottom: 220px;
+  bottom: 160px;
   left: 0;
   width: 100%;
   height: 397px;
   background: transparent url(../images/bgs/bg-home3.png) 50% 50% no-repeat;
   background-size: 100%;
   z-index: 4;
+  transform: translateY(-77.9118px);
 }
 
 .header-bg-4 {
@@ -344,6 +350,7 @@ section {
   background: transparent url(../images/bgs/bg-home4.png) 50% 50% no-repeat;
   background-size: 100%;
   z-index: 3;
+  transform: translateY(-65.3119px);
 }
 
 .header-bg-5 {
@@ -355,4 +362,5 @@ section {
   background: transparent url(../images/bgs/bg-home5.png) 50% 50% no-repeat;
   background-size: 100%;
   z-index: 2;
+  transform: translateY(-44.6743px);
 }
