--- a/src/sass/parallaxer.scss
+++ b/src/sass/parallaxer.scss
@@ -1,5 +1,9 @@
 // parallaxer styles
 
+.home-parallax {
+    transform: all 0.2s;
+}
+
 .header-bg-1 {
     position: absolute;
     bottom: 0;
@@ -13,24 +17,26 @@
 
 .header-bg-2 {
     position: absolute;
-    bottom: 140px;
+    bottom: 80px;
     left: 0;
     width: 100%;
     height: 355px;
     background: transparent url(../images/bgs/bg-home2.png) 50% 50% no-repeat;
     background-size: 100%;
     z-index: 5;
+    transform: translateY(-84.2009px);
 }
 
 .header-bg-3 {
     position: absolute;
-    bottom: 220px;
+    bottom: 160px;
     left: 0;
     width: 100%;
     height: 397px;
     background: transparent url(../images/bgs/bg-home3.png) 50% 50% no-repeat;
     background-size: 100%;
     z-index: 4;
+    transform: translateY(-77.9118px);
 }
 
 .header-bg-4 {
@@ -42,6 +48,7 @@
     background: transparent url(../images/bgs/bg-home4.png) 50% 50% no-repeat;
     background-size: 100%;
     z-index: 3;
+    transform: translateY(-65.3119px);
 }
 
 .header-bg-5 {
@@ -53,4 +60,5 @@
     background: transparent url(../images/bgs/bg-home5.png) 50% 50% no-repeat;
     background-size: 100%;
     z-index: 2;
+    transform: translateY(-44.6743px);
 }
