--- a/site/static/css/styles.css
+++ b/site/static/css/styles.css
@@ -121,7 +121,7 @@ body {
   font-size: 45px;
 }
 .home-header p {
-  font-size: 18px;
+  font-size: 20px;
   padding: 30px 100px 30px 0;
 }
 @media (max-width: 1240px) {
@@ -157,22 +157,6 @@ body {
   .home-title {
     text-align: center;
   }
-}
-
-.home-video {
-  position: relative;
-  padding-bottom: 56.25%;
-  /* 16:9 */
-  padding-top: 25px;
-  height: 0;
-}
-
-.home-video iframe, .home-video video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 section {
@@ -242,7 +226,31 @@ section {
 }
 
 .home-video {
+  position: relative;
   min-height: 900px;
+  background-color: white;
+  z-index: 2;
+}
+
+.home-video__container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 715px;
+  height: 500px;
+}
+.home-video__container video {
+  -webkit-box-shadow: 1px 2px 40px 8px rgba(108, 73, 255, 0.2);
+  box-shadow: 1px 2px 40px 8px rgba(108, 73, 255, 0.2);
+}
+
+.home-video__header {
+  font-size: 48px;
+  text-transform: uppercase;
+  padding-bottom: 40px;
 }
 
 .top-nav {
