--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -26,7 +26,7 @@ body {
         font-size: 45px;
     }
     p {
-        font-size: 18px;
+        font-size: 20px;
         padding: 30px 100px 30px 0;
     }
     @media (max-width: 1240px) {
@@ -62,17 +62,17 @@ body {
 }
 
 .home-video {
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9 */
-	padding-top: 25px;
-	height: 0;
+	// position: relative;
+	// padding-bottom: 56.25%; /* 16:9 */
+	// padding-top: 25px;
+	// height: 0;
 }
 .home-video iframe, .home-video video {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+	// position: absolute;
+	// top: 0;
+	// left: 0;
+	// width: 100%;
+	// height: 100%;
 }
 
 // homepage styles
@@ -140,5 +140,26 @@ section {
 }
 
 .home-video {
+    position: relative;
     min-height: 900px;
+    background-color: white;
+    z-index: 2;
+}
+
+.home-video__container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 715px;
+    height: 500px;
+    video {
+        box-shadow: 1px 2px 40px 8px rgba(108, 73, 255, 0.2);
+    }
+}
+
+.home-video__header {
+    font-size: 48px;
+    text-transform: uppercase;
+    padding-bottom: 40px;
 }
