--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -21,3 +21,6 @@ $color-signup-background: #FFFFFF;
 $color-form-background: #F2F2F4;
 $color-button-light: #D97BFF;
 $color-button-dark: #734CFF;
+$color-cap-meter: #7ED321;
+$color-cap-bg: #E8F7D8;
+$color-roadmap: #4B49FF;
