--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -281,17 +281,18 @@ section {
 }
 .social-media__infographic .cyclist {
   position: absolute;
-  bottom: 0;
-  left: 80px;
-  width: 200px;
+  bottom: -80px;
+  left: 62px;
+  width: 258px;
 }
 
 .social-media__tag {
+  transition: all 0.2s;
   position: relative;
   display: inline-block;
   background-color: white;
   box-shadow: 1px 1px 15px 1px rgba(0, 0, 0, 0.2);
-  min-width: 266px;
+  min-width: 260px;
   min-height: 85px;
   box-sizing: border-box;
   padding: 16px 16px 16px 80px;
@@ -307,6 +308,22 @@ section {
 .social-media__tag strong {
   font-size: 24px;
   display: block;
+}
+.social-media__tag.-leaks {
+  position: absolute;
+  top: 45%;
+  transform: translateY(-50%);
+  left: 20px;
+}
+.social-media__tag.-brother {
+  position: absolute;
+  left: 50%;
+  top: 60px;
+}
+.social-media__tag.-fakenews {
+  position: absolute;
+  left: 60%;
+  top: 55%;
 }
 
 .top-nav {
@@ -493,4 +510,215 @@ section {
   background-size: 100%;
   z-index: 2;
   transform: translateY(-44.6743px);
+}
+
+/* Cap styles
+*/
+.market-cap {
+  box-sizing: border-box;
+  padding: 0 160px 50px 160px;
+}
+
+.current-stage__label {
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-bottom: 16px;
+  padding-left: 10px;
+}
+
+.current-stage {
+  position: relative;
+  border-radius: 26px;
+  box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.4);
+  box-sizing: border-box;
+  padding: 40px 100px;
+  text-align: center;
+  text-transform: uppercase;
+  z-index: 2;
+  background-color: white;
+}
+
+.current-stage__shadow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.4);
+  box-sizing: border-box;
+  border-radius: 26px;
+}
+
+.current-stage__header {
+  font-size: 24px;
+}
+
+.current-stage__subheader {
+  font-size: 18px;
+  padding: 40px 0 80px;
+}
+.current-stage__subheader span {
+  padding: 0 10px;
+}
+
+.current-stage__meter {
+  width: 100%;
+  height: 8px;
+  border-radius: 9px;
+  background-color: #E8F7D8;
+}
+
+.current-stage__widget {
+  height: 8px;
+  width: 50%;
+  border-radius: 9px;
+  background-color: #7ED321;
+}
+
+.current-stage__bullet {
+  margin-top: 26px;
+  text-align: left;
+}
+.current-stage__bullet li {
+  position: relative;
+  font-size: 18px;
+  line-height: 2.2;
+  padding-left: 20px;
+}
+.current-stage__bullet li.-active:before {
+  background-color: #7ED321;
+}
+.current-stage__bullet li:before {
+  content: ' ';
+  position: absolute;
+  top: 14px;
+  left: 0;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  background-color: #E8F7D8;
+}
+
+.current-stage__logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.current-stage__help {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+/* Roadmap styles
+*/
+.roadmap {
+  padding: 160px 0;
+}
+
+.roadmap-header {
+  padding: 40px 300px 50px 160px;
+  line-height: 1.2;
+}
+.roadmap-header h2 {
+  text-transform: uppercase;
+  font-size: 45px;
+}
+@media (max-width: 1240px) {
+  .roadmap-header {
+    padding: 40px 160px 50px 160px;
+  }
+}
+@media (max-width: 952px) {
+  .roadmap-header {
+    padding: 40px 60px 50px 60px;
+  }
+}
+
+.roadmap-map {
+  position: relative;
+  height: 230px;
+}
+.roadmap-map:after {
+  content: ' ';
+  display: table;
+  clear: both;
+}
+
+.roadmap-map__item {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 14.22%;
+  float: left;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+.roadmap-map__label {
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase;
+  padding-bottom: 40px;
+}
+
+.roadmap-map__description {
+  text-align: center;
+  font-size: 16px;
+  text-transform: uppercase;
+  padding-top: 40px;
+  line-height: 1.2;
+}
+
+.roadmap-map__bullet--mask {
+  height: 50px;
+}
+
+.roadmap-map__bullet {
+  transition: all 0.2s;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 21px;
+  height: 21px;
+  border-radius: 50%;
+  border: 4px solid white;
+  background-color: #4B49FF;
+  box-shadow: 2px 3px 25px -3px rgba(108, 73, 255, 0.6);
+}
+.roadmap-map__bullet.-bullet2 {
+  width: 26px;
+  height: 26px;
+}
+.roadmap-map__bullet.-bullet3 {
+  width: 30px;
+  height: 30px;
+}
+.roadmap-map__bullet.-bullet4 {
+  width: 36px;
+  height: 36px;
+}
+.roadmap-map__bullet.-bullet5 {
+  width: 46px;
+  height: 46px;
+}
+.roadmap-map__bullet.-bullet6 {
+  width: 56px;
+  height: 56px;
+}
+.roadmap-map__bullet.-bullet7 {
+  width: 84px;
+  height: 84px;
+}
+
+.roadmap-map__line {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 100%;
+  border-top: 1px solid #4B49FF;
 }
