#time 1h 0m adding bullets and svgs

--- a/site/static/css/styles.css
+++ b/site/static/css/styles.css
@@ -784,3 +784,73 @@ section {
   width: 100%;
   border-top: 1px solid #4B49FF;
 }
+
+.roadmap-graphs {
+  padding: 100px 0;
+  width: 60%;
+  margin: 0 auto;
+}
+.roadmap-graphs:after {
+  content: ' ';
+  display: table;
+  clear: both;
+}
+
+.roadmap-graphs__col {
+  width: 50%;
+  float: left;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 20px;
+}
+.roadmap-graphs__col h3 {
+  text-align: center;
+  font-size: 24px;
+  text-transform: uppercase;
+  padding-bottom: 50px;
+}
+
+.roadmap-graphs__svg {
+  width: 100%;
+  max-width: 316px;
+}
+
+.roadmap-graphs__ul {
+  margin-top: 100px;
+}
+.roadmap-graphs__ul li {
+  line-height: 2.8;
+}
+
+.roadmap-graphs__ul--right li {
+  position: relative;
+  padding-left: 40px;
+}
+.roadmap-graphs__ul--right li:before {
+  content: ' ';
+  position: absolute;
+  left: 0;
+  top: 10px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 3px solid #FF496F;
+}
+
+.roadmap-graphs__ul--left {
+  text-align: right;
+}
+.roadmap-graphs__ul--left li {
+  position: relative;
+  padding-right: 40px;
+}
+.roadmap-graphs__ul--left li:before {
+  content: ' ';
+  position: absolute;
+  right: 0;
+  top: 10px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 3px solid #FF496F;
+}
