--- a/src/sass/roadmap.scss
+++ b/src/sass/roadmap.scss
@@ -108,6 +108,76 @@
     border-top: 1px solid $color-roadmap;
 }
 
+.roadmap-graphs {
+    padding: 100px 0;
+    width: 60%;
+    margin: 0 auto;
+    &:after {
+        content: ' ';
+        display: table;
+        clear: both;
+    }
+}
+
+.roadmap-graphs__col {
+    width: 50%;
+    float: left;
+    box-sizing: border-box;
+    padding: 20px;
+    h3 {
+        text-align: center;
+        font-size: 24px;
+        text-transform: uppercase;
+        padding-bottom: 50px;
+    }
+}
+
+.roadmap-graphs__svg {
+    width: 100%;
+    max-width: 316px;
+}
+
+.roadmap-graphs__ul {
+    margin-top: 100px;
+    li {
+        line-height: 2.8;
+    }
+}
+
+.roadmap-graphs__ul--right {
+    li {
+        position: relative;
+        padding-left: 40px;
+        &:before {
+            content: ' ';
+            position: absolute;
+            left: 0;
+            top: 10px;
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            border: 3px solid #FF496F;
+        }
+    }
+}
+
+.roadmap-graphs__ul--left {
+    text-align: right;
+    li {
+        position: relative;
+        padding-right: 40px;
+        &:before {
+            content: ' ';
+            position: absolute;
+            right: 0;
+            top: 10px;
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            border: 3px solid #FF496F;
+        }
+    }
+}
 
 
 
