#time 2h 0m adding "in the news" with responsive carousel

--- a/src/sass/buttons.scss
+++ b/src/sass/buttons.scss
@@ -26,3 +26,11 @@ button, .button {
     background-color: $color-button-background;
     color: $color-alternate-font;
 }
+
+.button-news {
+    box-shadow: none;
+    background-color: $color-news-button;
+    color: white;
+    font-size: 15px;
+    padding: 16px 20px;
+}
