--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -16,7 +16,8 @@ $color-header-font: #07160E;
 $color-footer-font: #ffffff;
 $color-sidebar-font: #000000;
 $color-sidebar-link: #0676FF;
-$color-coupon-font: #FF496F;
+$color-news-button: #FF496F;
+$color-news-font: #050505;
 $color-signup-background: #FFFFFF;
 $color-form-background: #F2F2F4;
 $color-button-light: #D97BFF;
