--- a/src/sass/roadmap.scss
+++ b/src/sass/roadmap.scss
@@ -108,8 +108,11 @@
     border-top: 1px solid $color-roadmap;
 }
 
-.roadmap-graphs {
+.roadmap-graphs__container {
     padding: 100px 0;
+}
+
+.roadmap-graphs {
     width: 60%;
     margin: 0 auto;
     &:after {
