--- a/src/sass/team.scss
+++ b/src/sass/team.scss
@@ -2,7 +2,7 @@
 */
 
 .true-team {
-    padding: 0 160px 40px;
+    padding: 120px 160px 200px;
     box-sizing: border-box;
     h2 {
         font-size: 45px;
