--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -26,12 +26,53 @@
     background-size: 100%;
 }
 
+.site-footer__bg2 {
+    position: absolute;
+    bottom: 130px;
+    left: 0;
+    width: 100%;
+    height: 526px;
+    background: transparent url(../images/bgs/bg-footer2.png) 50% 100% no-repeat;
+    background-size: 100%;
+}
+
+.site-footer__bg3 {
+    position: absolute;
+    bottom: 200px;
+    left: 0;
+    width: 100%;
+    height: 526px;
+    background: transparent url(../images/bgs/bg-footer3.png) 50% 100% no-repeat;
+    background-size: 100%;
+}
+
+.site-footer__bg4 {
+    position: absolute;
+    bottom: 200px;
+    left: 0;
+    width: 100%;
+    height: 526px;
+    background: transparent url(../images/bgs/bg-footer4.png) 50% 100% no-repeat;
+    background-size: 100%;
+}
+
+.site-footer__bg5 {
+    position: absolute;
+    bottom: 200px;
+    left: 0;
+    width: 100%;
+    height: 526px;
+    background: transparent url(../images/bgs/bg-footer5.png) 50% 100% no-repeat;
+    background-size: 100%;
+}
+
 .site-footer__phone {
     position: absolute;
     right: 15%;
     top: 0;
     max-width: 400px;
     width: 50%;
+    z-index: 10;
 }
 
 .true-footer {
@@ -65,15 +106,34 @@
 .footer-legal__links {
     padding-top: 20px;
     a {
+        position: relative;
         transition: all 0.25s;
         font-size: 14px;
         color: white;
         text-transform: uppercase;
         text-decoration: none;
         margin-right: 30px;
-        &:hover {
-            text-decoration: none;
-            opacity: 0.8;
+        // &:hover {
+        //     text-decoration: none;
+        //     opacity: 0.8;
+        // }
+        &:before {
+            transition: all 0.2s ease-in-out 0s;
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            bottom: -5px;
+            left: 0;
+            background-color: white;
+            visibility: hidden;
+            transform: scaleX(0);
+        }
+        &:hover, &:active {
+            &:before {
+                visibility: visible;
+                transform: scaleX(1);
+            }
         }
     }
 }
