--- a/src/sass/team.scss
+++ b/src/sass/team.scss
@@ -2,9 +2,10 @@
 */
 
 .true-team {
-    padding: 120px 160px 200px;
+    padding: 120px 60px 200px 60px;
     box-sizing: border-box;
     h2 {
+        padding: 0 160px;
         font-size: 45px;
         text-transform: uppercase;
     }
@@ -12,8 +13,10 @@
 
 .team-protraits {
     position: relative;
-    left: -40px;
-    padding: 80px 0 40px;
+    left: -60px;
+    padding: 80px 40px;
+    max-width: 1200px;
+    margin: 0 auto;
     &:after {
         content: ' ';
         display: table;
