#time 1h 0m adding better animations to the header section

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -173,7 +173,13 @@ section {
   background-image: linear-gradient(#DEFBFF, white 60%);
 }
 
+.home-header-scroller {
+  transition: all 0.2s;
+  position: relative;
+}
+
 .presale-countdown {
+  transition: all 0.25s;
   position: absolute;
   bottom: -200px;
   max-width: 535px;
@@ -623,7 +629,7 @@ section {
   background: transparent url(../images/bgs/bg-home5.png) 50% 50% no-repeat;
   background-size: 100%;
   z-index: 2;
-  transform: translateY(-44.6743px);
+  transform: translateY(-61.3069px);
 }
 
 /* Cap styles
