--- a/src/sass/roadmap.scss
+++ b/src/sass/roadmap.scss
@@ -120,6 +120,9 @@
         display: table;
         clear: both;
     }
+    @media (max-width: $breakpoint-tablet) {
+        width: 82%;
+    }
 }
 
 .roadmap-graphs__col {
