--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -6,6 +6,7 @@ $breakpoint-big-screen: 1300px;
 $breakpoint-nav-slim: 1000px;
 $breakpoint-nav-stack: 820px;
 $breakpoint-phablet: 600px;
+$breakpoint-tablet: 770px;
 
 // branded colors
 $color-background: #ffffff;
