#time 2h 0m starting updates for new True marketing site

--- a/src/sass/buttons.scss
+++ b/src/sass/buttons.scss
@@ -34,3 +34,10 @@ button, .button {
     font-size: 15px;
     padding: 16px 20px;
 }
+
+.button-topnav {
+    font-size: 14px;
+    color: $color-main-font;
+    text-decoration: none;
+    text-transform: uppercase;
+}
