--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -11,6 +11,7 @@ $breakpoint-tablet: 770px;
 // branded colors
 $color-background: #ffffff;
 $color-button-background: #4B49FF;
+$color-countdown-accent: #c1e1b8;
 $color-alternate-font: #ffffff;
 $color-main-font: #25247C;
 $color-header-font: #07160E;
