--- a/site/static/css/styles.css
+++ b/site/static/css/styles.css
@@ -102,6 +102,13 @@ button:hover, .button:hover {
   padding: 16px 20px;
 }
 
+.button-topnav {
+  font-size: 14px;
+  color: #25247C;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
 /* Home styles
 */
 body {
@@ -120,7 +127,7 @@ body {
 
 .home-header {
   color: #07160E;
-  padding: 40px 300px 50px 160px;
+  padding: 160px 300px 50px 160px;
   line-height: 1.2;
   z-index: 1000;
   position: relative;
@@ -135,12 +142,12 @@ body {
 }
 @media (max-width: 1240px) {
   .home-header {
-    padding: 40px 160px 50px 160px;
+    padding: 140px 160px 50px 160px;
   }
 }
 @media (max-width: 952px) {
   .home-header {
-    padding: 40px 60px 50px 60px;
+    padding: 120px 60px 50px 60px;
   }
 }
 
@@ -229,16 +236,26 @@ section {
 }
 
 .presale-countdown__header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   font-size: 20px;
+  background-color: #c1e1b8;
+  border-radius: 20px 20px 0 0;
+  padding: 20px 0;
+  text-transform: none;
+  font-size: 26px;
 }
 
 .presale-countdown__subheader {
   font-size: 36px;
-  padding: 10px 0 40px;
+  padding: 60px 0 40px;
 }
 
 .presale-countdown__counter {
   width: 100%;
+  margin-top: 80px;
   margin-bottom: 40px;
 }
 .presale-countdown__counter:after {
@@ -252,11 +269,29 @@ section {
   float: left;
   font-size: 48px;
 }
+.presale-countdown__slot span {
+  position: relative;
+  display: inline-block;
+  border-radius: 6px;
+  padding: 10px 14px;
+  background-color: #c1e1b8;
+}
+.presale-countdown__slot span:after {
+  content: ':';
+  position: absolute;
+  right: -21px;
+  top: 5px;
+  color: #c1e1b8;
+}
+.presale-countdown__slot span#counterSeconds:after {
+  content: '';
+}
 
 .presale-countdown__label {
   margin-top: 6px;
   text-transform: uppercase;
   font-size: 14px;
+  color: #c1e1b8;
 }
 
 .home-video {
@@ -414,17 +449,24 @@ section {
 }
 
 .top-nav {
-  position: relative;
+  position: fixed;
   width: 100%;
-  min-height: 110px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 30px;
   font-size: 14px;
+  background-color: #e1fbff;
+  z-index: 10000;
+}
+
+.top-nav__logo {
+  position: absolute;
+  top: 14px;
 }
 
 .top-nav__menu {
   float: right;
+  margin-right: 40px;
 }
 @media (max-width: 600px) {
   .top-nav__menu {
@@ -434,7 +476,7 @@ section {
 
 .top-nav__item {
   position: relative;
-  margin-left: 35px;
+  margin-left: 25px;
   -webkit-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
@@ -1478,4 +1520,223 @@ section {
   text-align: center;
   font-size: 14px;
   color: white;
+}
+
+/* Roadmap styles
+*/
+.roadmap {
+  padding: 160px 0;
+}
+
+.roadmap-header {
+  padding: 40px 300px 50px 160px;
+  line-height: 1.2;
+}
+.roadmap-header h2 {
+  text-transform: uppercase;
+  font-size: 45px;
+}
+@media (max-width: 1240px) {
+  .roadmap-header {
+    padding: 40px 160px 50px 160px;
+  }
+}
+@media (max-width: 952px) {
+  .roadmap-header {
+    padding: 40px 60px 50px 60px;
+  }
+}
+
+.roadmap-map {
+  position: relative;
+  height: 230px;
+}
+.roadmap-map:after {
+  content: ' ';
+  display: table;
+  clear: both;
+}
+
+.roadmap-map__item {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  width: 14.22%;
+  float: left;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+.roadmap-map__label {
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase;
+  padding-bottom: 40px;
+}
+
+.roadmap-map__description {
+  text-align: center;
+  font-size: 16px;
+  text-transform: uppercase;
+  padding-top: 40px;
+  line-height: 1.2;
+}
+
+.roadmap-map__bullet--mask {
+  height: 50px;
+}
+
+.roadmap-map__bullet {
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 21px;
+  height: 21px;
+  border-radius: 50%;
+  border: 4px solid white;
+  background-color: #4B49FF;
+  -webkit-box-shadow: 2px 3px 25px -3px rgba(108, 73, 255, 0.6);
+  box-shadow: 2px 3px 25px -3px rgba(108, 73, 255, 0.6);
+}
+.roadmap-map__bullet.-bullet2 {
+  width: 26px;
+  height: 26px;
+}
+.roadmap-map__bullet.-bullet3 {
+  width: 30px;
+  height: 30px;
+}
+.roadmap-map__bullet.-bullet4 {
+  width: 36px;
+  height: 36px;
+}
+.roadmap-map__bullet.-bullet5 {
+  width: 46px;
+  height: 46px;
+}
+.roadmap-map__bullet.-bullet6 {
+  width: 56px;
+  height: 56px;
+}
+.roadmap-map__bullet.-bullet7 {
+  width: 84px;
+  height: 84px;
+}
+
+.roadmap-map__line {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  width: 100%;
+  border-top: 1px solid #4B49FF;
+}
+
+.roadmap-graphs__container {
+  padding: 100px 0;
+}
+
+.roadmap-graphs {
+  width: 60%;
+  margin: 0 auto;
+}
+.roadmap-graphs:after {
+  content: ' ';
+  display: table;
+  clear: both;
+}
+@media (max-width: 770px) {
+  .roadmap-graphs {
+    width: 82%;
+  }
+}
+
+.roadmap-graphs__col {
+  width: 50%;
+  float: left;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 20px;
+}
+.roadmap-graphs__col h3 {
+  text-align: center;
+  font-size: 24px;
+  text-transform: uppercase;
+  padding-bottom: 50px;
+}
+
+.roadmap-graphs__svg {
+  width: 100%;
+  max-width: 316px;
+}
+
+.roadmap-graphs__ul {
+  margin-top: 100px;
+}
+.roadmap-graphs__ul li {
+  line-height: 2.8;
+}
+
+.roadmap-graphs__ul--right li {
+  position: relative;
+  padding-left: 40px;
+}
+.roadmap-graphs__ul--right li:before {
+  content: ' ';
+  position: absolute;
+  left: 0;
+  top: 10px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+}
+
+.roadmap-graphs__item.-red:before {
+  border: 3px solid #FF496F;
+}
+.roadmap-graphs__item.-blue:before {
+  border: 3px solid #4B49FF;
+}
+.roadmap-graphs__item.-lightblue:before {
+  border: 3px solid #3EAEFF;
+}
+.roadmap-graphs__item.-lightgreen:before {
+  border: 3px solid #7ED321;
+}
+.roadmap-graphs__item.-darkgreen:before {
+  border: 3px solid #26CE93;
+}
+.roadmap-graphs__item.-yellow:before {
+  border: 3px solid #F8E71C;
+}
+.roadmap-graphs__item.-grey:before {
+  border: 3px solid #9B9B9B;
+}
+
+.roadmap-graphs__ul--left {
+  text-align: right;
+}
+.roadmap-graphs__ul--left li {
+  position: relative;
+  padding-right: 40px;
+}
+.roadmap-graphs__ul--left li:before {
+  content: ' ';
+  position: absolute;
+  right: 0;
+  top: 10px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
 }
