--- a/src/sass/navigation.scss
+++ b/src/sass/navigation.scss
@@ -1,16 +1,23 @@
 // navigation styles
 
 .top-nav {
-    position: relative;
+    position: fixed;
     width: 100%;
-    min-height: 110px;
     box-sizing: border-box;
     padding: 30px;
     font-size: 14px;
+    background-color: #e1fbff;
+    z-index: 10000;
+}
+
+.top-nav__logo {
+    position: absolute;
+    top: 14px;
 }
 
 .top-nav__menu {
     float: right;
+    margin-right: 40px;
     @media (max-width: $breakpoint-phablet) {
         display: none;
     }
@@ -18,7 +25,7 @@
 
 .top-nav__item {
     position: relative;
-    margin-left: 35px;
+    margin-left: 25px;
     transition: all 0.2s;
     display: inline-block;
     font-size: 14px;
