#time 2h 0m adding signup form

--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -13,8 +13,8 @@ $color-background: #ffffff;
 $color-button-background: #4B49FF;
 $color-countdown-accent: #c1e1b8;
 $color-alternate-font: #ffffff;
-$color-main-font: #25247C;
-$color-header-font: #07160E;
+$color-main-font: #648350;
+$color-header-font: #0a2c1a;
 $color-footer-font: #ffffff;
 $color-sidebar-font: #000000;
 $color-sidebar-link: #0676FF;
@@ -27,3 +27,4 @@ $color-button-dark: #734CFF;
 $color-cap-meter: #7ED321;
 $color-cap-bg: #E8F7D8;
 $color-roadmap: #4B49FF;
+$color-coupon-font: red;
