--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,13 +2,16 @@
 @import "settings";
 @import "reset";
 @import "fonts";
+@import "forms";
+@import "minimalect";
 @import "buttons";
 @import "home";
 @import "navigation";
 @import "parallaxer";
 @import "cap";
-@import "roadmap";
 @import "news";
 @import "team";
 @import "footer";
 @import "roadmap";
+@import "features";
+@import "signup";
