--- a/site/static/css/styles.css
+++ b/site/static/css/styles.css
@@ -62,6 +62,275 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+input {
+  font-size: 18px;
+  display: block;
+  width: 100%;
+  padding: 6px 0px;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 2px solid #F2F2F4;
+  outline: none;
+}
+
+select {
+  font-size: 18px;
+  display: block;
+  width: 100%;
+  padding: 6px 0px;
+  margin-bottom: 30px;
+}
+
+/************************************
+          MINIMALECT 0.9
+  A minimalistic select replacement
+
+ jQuery 1.7+ required.
+ Developed by @groenroos
+ http://www.groenroos.fi
+
+ Github: http://git.io/Xedg9w
+
+ Licensed under the MIT license.
+
+************************************/
+.minict_wrapper {
+  font-family: "Roboto", sans-serif;
+  color: #000000;
+  background: #F2F2F4;
+  position: relative;
+  border-radius: 20px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 5px 15px;
+}
+.minict_wrapper * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.minict_wrapper.active {
+  border-radius: 20px 20px 0 0;
+}
+.minict_wrapper.disabled {
+  background: #f5f5f5;
+  text-shadow: 0 1px 0 #fff;
+}
+.minict_wrapper.disabled span {
+  color: #bbb !important;
+}
+.minict_wrapper:after {
+  content: "\25BC";
+  display: block;
+  position: absolute;
+  height: 33px;
+  width: 33px;
+  height: 2.1rem;
+  width: 2.1rem;
+  top: 7px;
+  right: 0;
+  font-size: 10px;
+  font-size: 0.6rem;
+  line-height: 32px;
+  line-height: 1.9rem;
+  text-align: center;
+  color: #555;
+}
+.minict_wrapper.active:after {
+  content: "\25B2";
+}
+.minict_wrapper.disabled:after {
+  color: #bbb;
+}
+.minict_wrapper span {
+  display: block;
+  border: 0;
+  outline: none;
+  background: none;
+  font-family: "Roboto", sans-serif;
+  color: #000000;
+  font-size: 16px;
+  font-size: 1rem;
+  height: 32px;
+  height: 2.0rem;
+  line-height: 23px;
+  line-height: 1.5rem;
+  padding: 4px 53px 0 6px;
+  padding: 4px 3.4rem 0 0.4rem;
+  cursor: default;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+}
+.minict_wrapper span:empty:before {
+  content: attr(data-placeholder);
+  color: #000000;
+  line-height: 23px;
+  line-height: 1.5rem;
+}
+.minict_wrapper ul {
+  display: none;
+  list-style: none;
+  padding: 0;
+  margin: 0 -1px;
+  position: absolute;
+  width: 100%;
+  width: calc(100% + 2px);
+  border: 1px solid #e5e5e5;
+  border-top: 1px solid #f9f9f9;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  top: 42px;
+  left: 0;
+  max-height: 350px;
+  max-height: 22rem;
+  overflow-y: auto;
+  z-index: 999999;
+  border-radius: 0 0 20px 20px;
+}
+.minict_wrapper ul li {
+  list-style: none;
+  font-size: 1rem;
+  padding: 0 10px;
+  padding: 0 0.7rem;
+  cursor: pointer;
+  background: #fff;
+  height: 35px;
+  height: 2.2rem;
+  line-height: 32px;
+  line-height: 2rem;
+}
+.minict_wrapper ul li:hover {
+  background: #fcfcfc;
+  color: #111;
+}
+.minict_wrapper ul li.minict_group {
+  color: #444;
+  background: #f6f6f6;
+  font-weight: bold;
+  cursor: default;
+}
+.minict_wrapper ul li.minict_empty {
+  display: none;
+  background: #fff !important;
+  color: #bbb;
+  text-align: center;
+  font-size: 14px;
+  font-size: 0.9rem;
+  height: 55px;
+  height: 3.5rem;
+  line-height: 50px;
+  line-height: 3.3rem;
+}
+.minict_wrapper ul li.disabled {
+  cursor: default;
+  background: #fff !important;
+  color: #bbb;
+}
+.minict_wrapper ul li.selected {
+  color: #819a9a;
+  background: #f8f9f9;
+}
+.minict_wrapper ul li.highlighted {
+  color: #fff;
+  background: #819a9a;
+}
+.minict_wrapper ul li.hidden {
+  display: none;
+}
+.minict_wrapper .minict_reset {
+  color: #A9A9A9;
+  bottom: 0;
+  display: none;
+  font-size: 18px;
+  font-size: 1.1rem;
+  line-height: 30px;
+  line-height: 1.9rem;
+  position: absolute;
+  right: 35px;
+  right: 2.2rem;
+  text-align: center;
+  top: 0;
+  text-decoration: none;
+  width: 20px;
+  width: 1.2rem;
+  -webkit-transition: all 0.35s ease-in-out;
+  -o-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+.minict_wrapper .minict_reset:hover {
+  color: #e0e0e0;
+  -webkit-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+.minict_wrapper .minict_reset:active {
+  color: #636363;
+}
+.minict_wrapper.disabled .minict_reset {
+  display: none;
+}
+
+.minict_wrapper.bubble {
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.05);
+  background: -o-linear-gradient(top, #ffffff 0%, #f9f9f9 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#f9f9f9));
+  background: linear-gradient(to bottom, #ffffff 0%, #f9f9f9 100%);
+}
+.minict_wrapper.bubble:hover {
+  border-color: #dcdcdc;
+}
+.minict_wrapper.bubble:after {
+  border-left: 1px solid #e5e5e5;
+  -webkit-box-shadow: inset 1px 0px 0px 0px #fff;
+  box-shadow: inset 1px 0px 0px 0px #fff;
+  height: 2.05rem;
+}
+.minict_wrapper.bubble ul {
+  top: 2.7rem;
+  -webkit-box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 6px;
+  overflow: visible;
+}
+.minict_wrapper.bubble ul:before {
+  position: absolute;
+  top: -11px;
+  left: 19px;
+  content: ".";
+  color: transparent;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 11px 11px 11px;
+  border-color: transparent transparent #e5e5e5 transparent;
+}
+.minict_wrapper.bubble ul:after {
+  position: absolute;
+  top: -10px;
+  left: 20px;
+  content: ".";
+  color: transparent;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 10px 10px 10px;
+  border-color: transparent transparent #ffffff transparent;
+}
+.minict_wrapper.bubble ul li.minict_first {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+.minict_wrapper.bubble ul li.minict_last {
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+.minict_wrapper.bubble .minict_reset {
+  width: 30px;
+}
+
 button, .button {
   cursor: pointer;
   display: inline-block;
@@ -74,7 +343,7 @@ button, .button {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   text-align: center;
-  color: #25247C;
+  color: #648350;
   opacity: 1;
   text-decoration: none;
   background-color: #ffffff;
@@ -104,7 +373,7 @@ button:hover, .button:hover {
 
 .button-topnav {
   font-size: 14px;
-  color: #25247C;
+  color: #648350;
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -113,7 +382,7 @@ button:hover, .button:hover {
 */
 body {
   background-color: #ffffff;
-  color: #25247C;
+  color: #648350;
 }
 
 .page-container {
@@ -126,7 +395,7 @@ body {
 }
 
 .home-header {
-  color: #07160E;
+  color: #0a2c1a;
   padding: 160px 300px 50px 160px;
   line-height: 1.2;
   z-index: 1000;
@@ -212,13 +481,12 @@ section {
   border-radius: 20px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.4);
-  box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.4);
   background-color: #ffffff;
   padding: 40px;
   text-align: center;
   text-transform: uppercase;
-  color: #25247C;
+  color: #648350;
+  border: 2px solid #c1e1b8;
 }
 @media (max-width: 1240px) {
   .presale-countdown {
@@ -296,7 +564,7 @@ section {
 
 .home-video {
   position: relative;
-  min-height: 900px;
+  min-height: 600px;
   background-color: white;
   z-index: 2;
 }
@@ -322,8 +590,8 @@ section {
 }
 
 .home-video__header {
+  text-align: center;
   font-size: 48px;
-  text-transform: uppercase;
   padding-bottom: 40px;
 }
 
@@ -339,6 +607,7 @@ section {
 .social-media h2 {
   font-size: 45px;
   margin-top: 20%;
+  text-align: center;
 }
 .social-media p {
   font-size: 20px;
@@ -362,6 +631,11 @@ section {
 }
 .social-media__col:last-child {
   width: 48%;
+}
+.social-media__col p {
+  text-align: center;
+  font-size: 22px;
+  padding-top: 140px;
 }
 
 .social-media__infographic {
@@ -401,6 +675,7 @@ section {
   font-size: 16px;
   text-transform: uppercase;
   line-height: 1.3;
+  border-radius: 40px;
 }
 .social-media__tag img {
   position: absolute;
@@ -482,11 +757,11 @@ section {
   transition: all 0.2s;
   display: inline-block;
   font-size: 14px;
-  color: #25247C;
+  color: #648350;
 }
 .top-nav__item .top-nav__link, .top-nav__item .language-selector__current {
   font-size: 14px;
-  color: #25247C;
+  color: #648350;
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -500,7 +775,7 @@ section {
   height: 1px;
   bottom: -5px;
   left: 0;
-  background-color: #25247C;
+  background-color: #648350;
   visibility: hidden;
   -webkit-transform: scaleX(0);
   -ms-transform: scaleX(0);
@@ -545,7 +820,7 @@ section {
     position: relative;
     padding: 6px 34px 6px 4px;
     width: 45px;
-    border: 1px solid #25247C;
+    border: 1px solid #648350;
     margin-right: 20px;
   }
 }
@@ -575,7 +850,7 @@ section {
   position: absolute;
   top: 0px;
   right: 1px;
-  border: solid #25247C;
+  border: solid #648350;
   border-width: 0 2px 2px 0;
   display: inline-block;
   padding: 4px;
@@ -902,225 +1177,6 @@ section {
   right: 20px;
 }
 
-/* Roadmap styles
-*/
-.roadmap {
-  padding: 160px 0;
-}
-
-.roadmap-header {
-  padding: 40px 300px 50px 160px;
-  line-height: 1.2;
-}
-.roadmap-header h2 {
-  text-transform: uppercase;
-  font-size: 45px;
-}
-@media (max-width: 1240px) {
-  .roadmap-header {
-    padding: 40px 160px 50px 160px;
-  }
-}
-@media (max-width: 952px) {
-  .roadmap-header {
-    padding: 40px 60px 50px 60px;
-  }
-}
-
-.roadmap-map {
-  position: relative;
-  height: 230px;
-}
-.roadmap-map:after {
-  content: ' ';
-  display: table;
-  clear: both;
-}
-
-.roadmap-map__item {
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  width: 14.22%;
-  float: left;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 10px;
-}
-
-.roadmap-map__label {
-  text-align: center;
-  font-size: 20px;
-  text-transform: uppercase;
-  padding-bottom: 40px;
-}
-
-.roadmap-map__description {
-  text-align: center;
-  font-size: 16px;
-  text-transform: uppercase;
-  padding-top: 40px;
-  line-height: 1.2;
-}
-
-.roadmap-map__bullet--mask {
-  height: 50px;
-}
-
-.roadmap-map__bullet {
-  -webkit-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  width: 21px;
-  height: 21px;
-  border-radius: 50%;
-  border: 4px solid white;
-  background-color: #4B49FF;
-  -webkit-box-shadow: 2px 3px 25px -3px rgba(108, 73, 255, 0.6);
-  box-shadow: 2px 3px 25px -3px rgba(108, 73, 255, 0.6);
-}
-.roadmap-map__bullet.-bullet2 {
-  width: 26px;
-  height: 26px;
-}
-.roadmap-map__bullet.-bullet3 {
-  width: 30px;
-  height: 30px;
-}
-.roadmap-map__bullet.-bullet4 {
-  width: 36px;
-  height: 36px;
-}
-.roadmap-map__bullet.-bullet5 {
-  width: 46px;
-  height: 46px;
-}
-.roadmap-map__bullet.-bullet6 {
-  width: 56px;
-  height: 56px;
-}
-.roadmap-map__bullet.-bullet7 {
-  width: 84px;
-  height: 84px;
-}
-
-.roadmap-map__line {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  width: 100%;
-  border-top: 1px solid #4B49FF;
-}
-
-.roadmap-graphs__container {
-  padding: 100px 0;
-}
-
-.roadmap-graphs {
-  width: 60%;
-  margin: 0 auto;
-}
-.roadmap-graphs:after {
-  content: ' ';
-  display: table;
-  clear: both;
-}
-@media (max-width: 770px) {
-  .roadmap-graphs {
-    width: 82%;
-  }
-}
-
-.roadmap-graphs__col {
-  width: 50%;
-  float: left;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 20px;
-}
-.roadmap-graphs__col h3 {
-  text-align: center;
-  font-size: 24px;
-  text-transform: uppercase;
-  padding-bottom: 50px;
-}
-
-.roadmap-graphs__svg {
-  width: 100%;
-  max-width: 316px;
-}
-
-.roadmap-graphs__ul {
-  margin-top: 100px;
-}
-.roadmap-graphs__ul li {
-  line-height: 2.8;
-}
-
-.roadmap-graphs__ul--right li {
-  position: relative;
-  padding-left: 40px;
-}
-.roadmap-graphs__ul--right li:before {
-  content: ' ';
-  position: absolute;
-  left: 0;
-  top: 10px;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-}
-
-.roadmap-graphs__item.-red:before {
-  border: 3px solid #FF496F;
-}
-.roadmap-graphs__item.-blue:before {
-  border: 3px solid #4B49FF;
-}
-.roadmap-graphs__item.-lightblue:before {
-  border: 3px solid #3EAEFF;
-}
-.roadmap-graphs__item.-lightgreen:before {
-  border: 3px solid #7ED321;
-}
-.roadmap-graphs__item.-darkgreen:before {
-  border: 3px solid #26CE93;
-}
-.roadmap-graphs__item.-yellow:before {
-  border: 3px solid #F8E71C;
-}
-.roadmap-graphs__item.-grey:before {
-  border: 3px solid #9B9B9B;
-}
-
-.roadmap-graphs__ul--left {
-  text-align: right;
-}
-.roadmap-graphs__ul--left li {
-  position: relative;
-  padding-right: 40px;
-}
-.roadmap-graphs__ul--left li:before {
-  content: ' ';
-  position: absolute;
-  right: 0;
-  top: 10px;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-}
-
 /* News styles
 */
 .true-news {
@@ -1380,13 +1436,17 @@ section {
   position: relative;
 }
 .site-footer h2 {
+  text-align: center;
   font-size: 45px;
-  text-transform: uppercase;
   padding-bottom: 60px;
 }
 
 .site-footer__inner {
-  padding: 100px 160px 800px;
+  text-align: center;
+  padding: 100px 160px 580px;
+}
+.site-footer__inner a {
+  margin: 0 8px;
 }
 
 .site-footer__bg {
@@ -1739,4 +1799,328 @@ section {
   width: 16px;
   height: 16px;
   border-radius: 50%;
+}
+
+.home-features {
+  color: #648350;
+  padding: 40px 20px;
+  max-width: 1056px;
+  margin: 0 auto;
+  line-height: 1.2;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 240px;
+}
+@media (max-width: 1300px) {
+  .home-features {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+@media (max-width: 820px) {
+  .home-features {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+.feature-row:after {
+  content: '';
+  clear: both;
+  display: table;
+}
+
+.features-item {
+  float: left;
+  width: 50%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+  min-height: 224px;
+  position: relative;
+  padding: 0 30px;
+  margin-bottom: 80px;
+}
+
+.feature-item__header {
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 1.2;
+  padding-bottom: 20px;
+  color: #0a2c1a;
+}
+
+.feature-item__description {
+  line-height: 1.2;
+  font-size: 20px;
+}
+
+.feature-item__image {
+  width: 100%;
+  border-radius: 6px;
+  -webkit-box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.4);
+  box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.4);
+  margin-bottom: 20px;
+}
+
+.true-value {
+  color: #ffffff;
+  padding: 80px 0px;
+  max-width: 820px;
+  margin: 0 auto;
+  line-height: 1.2;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border-top: 1px solid #ffffff;
+}
+@media (max-width: 1300px) {
+  .true-value {
+    margin: 0 40px;
+  }
+}
+@media (max-width: 820px) {
+  .true-value {
+    margin: 0 20px;
+  }
+}
+
+.true-value__header {
+  font-size: 30px;
+  line-height: 1.2;
+  padding-bottom: 40px;
+}
+
+.true-value__description {
+  line-height: 1.4;
+  padding-bottom: 20px;
+}
+
+.lets-do-this {
+  color: #ffffff;
+  padding: 40px 20px;
+}
+.lets-do-this h2 {
+  text-align: center;
+  font-size: 30px;
+  line-height: 1.2;
+}
+
+/* Signup styles
+*/
+.home-signup__overlay {
+  position: fixed;
+  background-color: black;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  opacity: 0.6;
+  display: none;
+}
+
+.home-signup {
+  display: block;
+  -webkit-transition: all 0.25s;
+  -o-transition: all 0.25s;
+  transition: all 0.25s;
+  position: fixed;
+  right: 0;
+  top: 0;
+  max-width: 390px;
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background-color: #FFFFFF;
+  color: #000000;
+  overflow: auto;
+  -webkit-box-shadow: -4px 0px 19px -4px rgba(0, 0, 0, 0.4);
+  box-shadow: -4px 0px 19px -4px rgba(0, 0, 0, 0.4);
+  z-index: 10001;
+  -webkit-transform: translateX(400px);
+  -ms-transform: translateX(400px);
+  transform: translateX(400px);
+}
+@media (max-width: 820px) {
+  .home-signup {
+    display: none;
+    right: 10px;
+    top: 10px;
+    height: 97%;
+    max-width: 96%;
+    border-radius: 12px;
+    margin: 0 auto 60px;
+    left: 10px;
+  }
+}
+.home-signup.-active {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+  display: block;
+}
+
+.home-signup__close {
+  display: block;
+  position: absolute;
+  right: 5px;
+}
+.home-signup__close:after {
+  display: inline-block;
+  content: "\00d7";
+  font-size: 40px;
+  width: 28px;
+}
+
+.home-signup__form-entry {
+  display: none;
+  padding: 68px 44px;
+}
+@media (max-width: 820px) {
+  .home-signup__form-entry {
+    padding: 40px 20px;
+  }
+}
+
+.home-signup__form-success {
+  padding: 88px 44px;
+  display: none;
+}
+.home-signup__form-success p {
+  line-height: 1.5;
+  margin-top: 26px;
+}
+
+.home-signup__success-email {
+  font-weight: bold;
+  color: #0676FF;
+}
+
+.home-signup__success-hdr {
+  font-size: 22px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.home-signup__success-hdr img {
+  position: relative;
+  top: 4px;
+  left: 8px;
+}
+
+.home-signup__header {
+  font-size: 24px;
+  color: red;
+  margin-bottom: 30px;
+}
+
+.home-signup__intro {
+  line-height: 1.4;
+  font-size: 18px;
+}
+@media (max-width: 600px) {
+  .home-signup__intro {
+    font-size: 20px;
+    line-height: 1.4;
+  }
+}
+
+.home-signup__form {
+  margin: 40px 0 0;
+}
+.home-signup__form label {
+  display: block;
+  font-size: 12px;
+  padding-bottom: 6px;
+  margin-left: 15px;
+}
+
+.home-signup__cta {
+  padding-top: 20px;
+}
+.home-signup__cta button {
+  width: 100%;
+}
+
+.signup-select-wrapper {
+  margin-bottom: 30px;
+}
+
+.signup-select.-full {
+  width: 100%;
+}
+
+.home-signup__error {
+  display: none;
+  color: red;
+  padding: 10px 0 10px;
+  line-height: 1.3;
+}
+
+.home-signup__throbber {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.8;
+  text-align: center;
+  z-index: 1111111;
+  color: #734CFF;
+}
+.home-signup__throbber .throbber-content {
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.home-signup__throbber .throbber-content img {
+  display: inline-block;
+}
+
+.mobile-form-cta {
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  position: fixed;
+  bottom: -2px;
+  left: 0;
+  padding: 30px 20px 40px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  text-align: center;
+  width: 100%;
+  background-color: white;
+  border-radius: 8px 8px 0 0;
+  z-index: 1000;
+  display: none;
+  -webkit-box-shadow: -4px 0px 19px -4px rgba(0, 0, 0, 0.4);
+  box-shadow: -4px 0px 19px -4px rgba(0, 0, 0, 0.4);
+}
+@media (max-width: 820px) {
+  .mobile-form-cta {
+    display: block;
+  }
+}
+.mobile-form-cta.-hide {
+  -webkit-transform: translateY(140px);
+  -ms-transform: translateY(140px);
+  transform: translateY(140px);
+}
+
+#footerCta {
+  width: 100%;
+  max-width: 280px;
+  margin: 0 auto;
+  font-size: 20px;
+  padding: 20px;
 }
