--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -6,14 +6,18 @@
     // box-sizing: border-box;
     position: relative;
     h2 {
+        text-align: center;
         font-size: 45px;
-        text-transform: uppercase;
         padding-bottom: 60px;
     }
 }
 
 .site-footer__inner {
-    padding: 100px 160px 800px;
+    text-align: center;
+    padding: 100px 160px 580px;
+    a {
+        margin: 0 8px;
+    }
 }
 
 .site-footer__bg {
