--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -93,12 +93,13 @@ section {
     min-height: 300px;
     border-radius: 20px;
     box-sizing: border-box;
-    box-shadow: 1px 2px 20px -1px rgba(108,73,255,0.4);
+    //box-shadow: 1px 2px 20px -1px rgba(108,73,255,0.4);
     background-color: $color-background;
     padding: 40px;
     text-align: center;
     text-transform: uppercase;
     color: $color-main-font;
+    border: 2px solid $color-countdown-accent;
     // transform: translateX(-1000px);
     @media (max-width: 1240px) {
         // min-height: 900px;
@@ -174,7 +175,7 @@ section {
 
 .home-video {
     position: relative;
-    min-height: 900px;
+    min-height: 600px;
     background-color: white;
     z-index: 2;
     @media (max-width: $breakpoint-tablet) {
@@ -209,8 +210,8 @@ section {
 }
 
 .home-video__header {
+    text-align: center;
     font-size: 48px;
-    text-transform: uppercase;
     padding-bottom: 40px;
 }
 
@@ -224,6 +225,7 @@ section {
     h2 {
         font-size: 45px;
         margin-top: 20%;
+        text-align: center;
     }
     p {
         font-size: 20px;
@@ -251,6 +253,11 @@ section {
     width: 52%;
     &:last-child {
         width: 48%;
+    }
+    p {
+        text-align: center;
+        font-size: 22px;
+        padding-top: 140px;
     }
 }
 
@@ -285,6 +292,7 @@ section {
     font-size: 16px;
     text-transform: uppercase;
     line-height: 1.3;
+    border-radius: 40px;
     img {
         position: absolute;
         left: 16px;
