--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -28,3 +28,4 @@ $color-cap-meter: #7ED321;
 $color-cap-bg: #E8F7D8;
 $color-roadmap: #4B49FF;
 $color-coupon-font: red;
+$color-feature-dark: #2f482a;
